<resources>
    <string name="app_name">MyApp4</string>
    <string name="greeting1">Hello Dad!</string>
    <string name="greeting2">Hello Mom!</string>
    <string name="greeting3">Hello Friend!</string>
    <string name="greeting4">Hello Funness!</string>
    <string name="greeting5">Greeting Earthling</string>
    <string name="like_label">LIKE</string>
    <string name="accomplishment_label">You made it!</string>
    <string name="layout_label_1">Layout 1</string>
    <string name="layout_label_2">Layout 2</string>
    <string name="layout_label_3">Welcome #3</string>
    <string name="layout_label_4">4 is on TOP</string>
    <string name="layout_label_5">Layout 5</string>
    <string name="layout_label_6">Layout 6</string>
    <string name="layout_label_7">Layout 7</string>
    <string name="long_quotes">
        Spread love everywhere you go. Let non one ever come to you without leaving happier.</string>

</resources>